src/decimill/parser/ModelParser.java
// Generated from ModelParser.g4 by ANTLR 4.4

    package decimill.parser;
    import decimill.*;
    import decimill.expression.*;
    import decimill.model.*;
    import org.apache.commons.lang3.StringUtils;

import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class ModelParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.4", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		InlineStart=1, BlockStart=2, EOL=3, Character=4, Word=5, Text=6, ID=7, 
		Int=8, Dbl=9, Procent=10, Allowed=11, Str=12, Dot=13, Colon=14, Comma=15, 
		Quote=16, FromTo=17, Refinement=18, Equals=19, PlusEq=20, MinusEq=21, 
		TimesEq=22, DivEq=23, Plus=24, Minus=25, Times=26, Div=27, Power=28, LowerThan=29, 
		GreaterThan=30, IsEqual=31, LBracket=32, RBracket=33, UBracket=34, LParent=35, 
		RParent=36, LCurly=37, RCurly=38, InlineEnd=39, BlockEnd=40, WS=41, BNL=42, 
		ERR=43;
	public static final String[] tokenNames = {
		"<INVALID>", "InlineStart", "BlockStart", "EOL", "Character", "Word", 
		"Text", "ID", "Int", "Dbl", "Procent", "Allowed", "Str", "Dot", "Colon", 
		"Comma", "Quote", "FromTo", "Refinement", "Equals", "PlusEq", "MinusEq", 
		"TimesEq", "DivEq", "Plus", "Minus", "Times", "Div", "Power", "LowerThan", 
		"GreaterThan", "IsEqual", "LBracket", "RBracket", "UBracket", "LParent", 
		"RParent", "LCurly", "RCurly", "InlineEnd", "BlockEnd", "WS", "BNL", "ERR"
	};
	public static final int
		RULE_parse = 0, RULE_element = 1, RULE_str = 2, RULE_inlineCode = 3, RULE_blockCode = 4, 
		RULE_nodeDeclaration = 5, RULE_varDeclaration = 6, RULE_refinement = 7, 
		RULE_name = 8, RULE_namespace = 9, RULE_assignment = 10, RULE_expression = 11, 
		RULE_expr_add = 12, RULE_expr_sub = 13, RULE_expr_mult = 14, RULE_expr_div = 15, 
		RULE_expr_pow = 16, RULE_expr_lt = 17, RULE_expr_gt = 18, RULE_expr_eq = 19, 
		RULE_expr_atom = 20, RULE_variable = 21, RULE_reference = 22, RULE_function = 23, 
		RULE_constant = 24, RULE_array = 25, RULE_assoc_array = 26, RULE_num_int = 27, 
		RULE_num_double = 28, RULE_num_procent = 29, RULE_dist = 30, RULE_val = 31;
	public static final String[] ruleNames = {
		"parse", "element", "str", "inlineCode", "blockCode", "nodeDeclaration", 
		"varDeclaration", "refinement", "name", "namespace", "assignment", "expression", 
		"expr_add", "expr_sub", "expr_mult", "expr_div", "expr_pow", "expr_lt", 
		"expr_gt", "expr_eq", "expr_atom", "variable", "reference", "function", 
		"constant", "array", "assoc_array", "num_int", "num_double", "num_procent", 
		"dist", "val"
	};

	@Override
	public String getGrammarFileName() { return "ModelParser.g4"; }

	@Override
	public String[] getTokenNames() { return tokenNames; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }


	    Model model;
	    Rewriter rewriter;
	    boolean inline;

	public ModelParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}
	public static class ParseContext extends ParserRuleContext {
		public Model m;
		public Rewriter r;
		public List<ElementContext> element() {
			return getRuleContexts(ElementContext.class);
		}
		public TerminalNode EOF() { return getToken(ModelParser.EOF, 0); }
		public ElementContext element(int i) {
			return getRuleContext(ElementContext.class,i);
		}
		public ParseContext(ParserRuleContext parent, int invokingState) { super(parent, invokingState); }
		public ParseContext(ParserRuleContext parent, int invokingState, Model m, Rewriter r) {
			super(parent, invokingState);
			this.m = m;
			this.r = r;
		}
		@Override public int getRuleIndex() { return RULE_parse; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof ModelParserListener ) ((ModelParserListener)listener).enterParse(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof ModelParserListener ) ((ModelParserListener)listener).exitParse(this);
		}
	}

	public final ParseContext parse(Model m,Rewriter r) throws RecognitionException {
		ParseContext _localctx = new ParseContext(_ctx, getState(), m, r);
		enterRule(_localctx, 0, RULE_parse);

		        model = m;
		        rewriter = r;
		    
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(65); 
			_errHandler.sync(this);
			_la = _input.LA(1);
			do {
				{
				{
				setState(64); element();
				}
				}
				setState(67); 
				_errHandler.sync(this);
				_la = _input.LA(1);
			} while ( (((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << InlineStart) | (1L << BlockStart) | (1L << Character))) != 0) );
			setState(69); match(EOF);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ElementContext extends ParserRuleContext {
		public TerminalNode InlineStart() { return getToken(ModelParser.InlineStart, 0); }
		public TerminalNode InlineEnd() { return getToken(ModelParser.InlineEnd, 0); }
		public List<StrContext> str() {
			return getRuleContexts(StrContext.class);
		}
		public TerminalNode EOF() { return getToken(ModelParser.EOF, 0); }
		public TerminalNode BlockStart() { return getToken(ModelParser.BlockStart, 0); }
		public TerminalNode BlockEnd() { return getToken(ModelParser.BlockEnd, 0); }
		public StrContext str(int i) {
			return getRuleContext(StrContext.class,i);
		}
		public InlineCodeContext inlineCode() {
			return getRuleContext(InlineCodeContext.class,0);
		}
		public BlockCodeContext blockCode() {
			return getRuleContext(BlockCodeContext.class,0);
		}
		public ElementContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_element; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof ModelParserListener ) ((ModelParserListener)listener).enterElement(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof ModelParserListener ) ((ModelParserListener)listener).exitElement(this);
		}
	}

	public final ElementContext element() throws RecognitionException {
		ElementContext _localctx = new ElementContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_element);
		int _la;
		try {
			int _alt;
			setState(84);
			switch (_input.LA(1)) {
			case Character:
				enterOuterAlt(_localctx, 1);
				{
				setState(72); 
				_errHandler.sync(this);
				_alt = 1;
				do {
					switch (_alt) {
					case 1:
						{
						{
						setState(71); str();
						}
						}
						break;
					default:
						throw new NoViableAltException(this);
					}
					setState(74); 
					_errHandler.sync(this);
					_alt = getInterpreter().adaptivePredict(_input,1,_ctx);
				} while ( _alt!=2 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER );
				}
				break;
			case InlineStart:
				enterOuterAlt(_localctx, 2);
				{
				setState(76); match(InlineStart);
				setState(77); inlineCode();
				setState(78); match(InlineEnd);
				}
				break;
			case BlockStart:
				enterOuterAlt(_localctx, 3);
				{
				setState(80); match(BlockStart);
				setState(81); blockCode();
				setState(82);
				_la = _input.LA(1);
				if ( !(_la==EOF || _la==BlockEnd) ) {
				_errHandler.recoverInline(this);
				}
				consume();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class StrContext extends ParserRuleContext {
		public TerminalNode Character(int i) {
			return getToken(ModelParser.Character, i);
		}
		public TerminalNode EOL() { return getToken(ModelParser.EOL, 0); }
		public List<TerminalNode> Character() { return getTokens(ModelParser.Character); }
		public StrContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_str; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof ModelParserListener ) ((ModelParserListener)listener).enterStr(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof ModelParserListener ) ((ModelParserListener)listener).exitStr(this);
		}
	}

	public final StrContext str() throws RecognitionException {
		StrContext _localctx = new StrContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_str);
		int _la;
		try {
			int _alt;
			enterOuterAlt(_localctx, 1);
			{
			setState(87); 
			_errHandler.sync(this);
			_alt = 1;
			do {
				switch (_alt) {
				case 1:
					{
					{
					setState(86); match(Character);
					}
					}
					break;
				default:
					throw new NoViableAltException(this);
				}
				setState(89); 
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,3,_ctx);
			} while ( _alt!=2 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER );
			setState(92);
			_la = _input.LA(1);
			if (_la==EOL) {
				{
				setState(91); match(EOL);
				}
			}

			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class InlineCodeContext extends ParserRuleContext {
		public NodeDeclarationContext nodeDeclaration;
		public RefinementContext refinement;
		public VarDeclarationContext varDeclaration() {
			return getRuleContext(VarDeclarationContext.class,0);
		}
		public AssignmentContext assignment() {
			return getRuleContext(AssignmentContext.class,0);
		}
		public NodeDeclarationContext nodeDeclaration() {
			return getRuleContext(NodeDeclarationContext.class,0);
		}
		public RefinementContext refinement() {
			return getRuleContext(RefinementContext.class,0);
		}
		public InlineCodeContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_inlineCode; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof ModelParserListener ) ((ModelParserListener)listener).enterInlineCode(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof ModelParserListener ) ((ModelParserListener)listener).exitInlineCode(this);
		}
	}

	public final InlineCodeContext inlineCode() throws RecognitionException {
		InlineCodeContext _localctx = new InlineCodeContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_inlineCode);
		try {
			setState(102);
			switch ( getInterpreter().adaptivePredict(_input,5,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(94); ((InlineCodeContext)_localctx).nodeDeclaration = nodeDeclaration();
				 rewriter.rewriteModelNode(((InlineCodeContext)_localctx).nodeDeclaration, model, ((InlineCodeContext)_localctx).nodeDeclaration.node); 
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(97); varDeclaration();
				}
				break;
			case 3:
				enterOuterAlt(_localctx, 3);
				{
				setState(98); ((InlineCodeContext)_localctx).refinement = refinement();
				 rewriter.rewriteModelNode(((InlineCodeContext)_localctx).refinement, model, ((InlineCodeContext)_localctx).refinement.node); 
				}
				break;
			case 4:
				enterOuterAlt(_localctx, 4);
				{
				setState(101); assignment();
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class BlockCodeContext extends ParserRuleContext {
		public NodeDeclarationContext nodeDeclaration(int i) {
			return getRuleContext(NodeDeclarationContext.class,i);
		}
		public List<AssignmentContext> assignment() {
			return getRuleContexts(AssignmentContext.class);
		}
		public AssignmentContext assignment(int i) {
			return getRuleContext(AssignmentContext.class,i);
		}
		public List<NodeDeclarationContext> nodeDeclaration() {
			return getRuleContexts(NodeDeclarationContext.class);
		}
		public RefinementContext refinement(int i) {
			return getRuleContext(RefinementContext.class,i);
		}
		public List<RefinementContext> refinement() {
			return getRuleContexts(RefinementContext.class);
		}
		public BlockCodeContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_blockCode; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof ModelParserListener ) ((ModelParserListener)listener).enterBlockCode(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof ModelParserListener ) ((ModelParserListener)listener).exitBlockCode(this);
		}
	}

	public final BlockCodeContext blockCode() throws RecognitionException {
		BlockCodeContext _localctx = new BlockCodeContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_blockCode);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(107); 
			_errHandler.sync(this);
			_la = _input.LA(1);
			do {
				{
				setState(107);
				switch ( getInterpreter().adaptivePredict(_input,6,_ctx) ) {
				case 1:
					{
					setState(104); nodeDeclaration();
					}
					break;
				case 2:
					{
					setState(105); refinement();
					}
					break;
				case 3:
					{
					setState(106); assignment();
					}
					break;
				}
				}
				setState(109); 
				_errHandler.sync(this);
				_la = _input.LA(1);
			} while ( (((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << Word) | (1L << Text) | (1L << ID))) != 0) );
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class NodeDeclarationContext extends ParserRuleContext {
		public Node node;
		public NameContext name;
		public NameContext name() {
			return getRuleContext(NameContext.class,0);
		}
		public NodeDeclarationContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_nodeDeclaration; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof ModelParserListener ) ((ModelParserListener)listener).enterNodeDeclaration(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof ModelParserListener ) ((ModelParserListener)listener).exitNodeDeclaration(this);
		}
	}

	public final NodeDeclarationContext nodeDeclaration() throws RecognitionException {
		NodeDeclarationContext _localctx = new NodeDeclarationContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_nodeDeclaration);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(111); ((NodeDeclarationContext)_localctx).name = name();
			 ((NodeDeclarationContext)_localctx).node =  model.addNodeByNameIfNotExists((((NodeDeclarationContext)_localctx).name!=null?_input.getText(((NodeDeclarationContext)_localctx).name.start,((NodeDeclarationContext)_localctx).name.stop):null)); 
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class VarDeclarationContext extends ParserRuleContext {
		public VariableContext variable() {
			return getRuleContext(VariableContext.class,0);
		}
		public VarDeclarationContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_varDeclaration; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof ModelParserListener ) ((ModelParserListener)listener).enterVarDeclaration(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof ModelParserListener ) ((ModelParserListener)listener).exitVarDeclaration(this);
		}
	}

	public final VarDeclarationContext varDeclaration() throws RecognitionException {
		VarDeclarationContext _localctx = new VarDeclarationContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_varDeclaration);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(114); variable();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class RefinementContext extends ParserRuleContext {
		public Node node;
		public NameContext name;
		public NameContext name(int i) {
			return getRuleContext(NameContext.class,i);
		}
		public TerminalNode Refinement() { return getToken(ModelParser.Refinement, 0); }
		public TerminalNode Comma(int i) {
			return getToken(ModelParser.Comma, i);
		}
		public List<NameContext> name() {
			return getRuleContexts(NameContext.class);
		}
		public List<TerminalNode> Comma() { return getTokens(ModelParser.Comma); }
		public RefinementContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_refinement; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof ModelParserListener ) ((ModelParserListener)listener).enterRefinement(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof ModelParserListener ) ((ModelParserListener)listener).exitRefinement(this);
		}
	}

	public final RefinementContext refinement() throws RecognitionException {
		RefinementContext _localctx = new RefinementContext(_ctx, getState());
		enterRule(_localctx, 14, RULE_refinement);

		        Node parent;
		        Node child;
		    
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(116); ((RefinementContext)_localctx).name = name();
			 parent = model.addNodeByNameIfNotExists((((RefinementContext)_localctx).name!=null?_input.getText(((RefinementContext)_localctx).name.start,((RefinementContext)_localctx).name.stop):null)); 
			setState(118); match(Refinement);
			setState(119); ((RefinementContext)_localctx).name = name();
			 child = model.addNodeByNameIfNotExists((((RefinementContext)_localctx).name!=null?_input.getText(((RefinementContext)_localctx).name.start,((RefinementContext)_localctx).name.stop):null)); parent.addChild(child); 
			setState(127);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==Comma) {
				{
				{
				setState(121); match(Comma);
				setState(122); ((RefinementContext)_localctx).name = name();
				 child = model.addNodeByNameIfNotExists((((RefinementContext)_localctx).name!=null?_input.getText(((RefinementContext)_localctx).name.start,((RefinementContext)_localctx).name.stop):null)); parent.addChild(child); 
				}
				}
				setState(129);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			 ((RefinementContext)_localctx).node =  parent; 
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class NameContext extends ParserRuleContext {
		public TerminalNode Word() { return getToken(ModelParser.Word, 0); }
		public TerminalNode Text() { return getToken(ModelParser.Text, 0); }
		public NameContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_name; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof ModelParserListener ) ((ModelParserListener)listener).enterName(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof ModelParserListener ) ((ModelParserListener)listener).exitName(this);
		}
	}

	public final NameContext name() throws RecognitionException {
		NameContext _localctx = new NameContext(_ctx, getState());
		enterRule(_localctx, 16, RULE_name);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(132);
			_la = _input.LA(1);
			if ( !(_la==Word || _la==Text) ) {
			_errHandler.recoverInline(this);
			}
			consume();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class NamespaceContext extends ParserRuleContext {
		public TerminalNode Word() { return getToken(ModelParser.Word, 0); }
		public NamespaceContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_namespace; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof ModelParserListener ) ((ModelParserListener)listener).enterNamespace(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof ModelParserListener ) ((ModelParserListener)listener).exitNamespace(this);
		}
	}

	public final NamespaceContext namespace() throws RecognitionException {
		NamespaceContext _localctx = new NamespaceContext(_ctx, getState());
		enterRule(_localctx, 18, RULE_namespace);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(134); match(Word);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class AssignmentContext extends ParserRuleContext {
		public VariableContext variable;
		public ExpressionContext expression;
		public TerminalNode Equals() { return getToken(ModelParser.Equals, 0); }
		public ExpressionContext expression() {
			return getRuleContext(ExpressionContext.class,0);
		}
		public VariableContext variable() {
			return getRuleContext(VariableContext.class,0);
		}
		public AssignmentContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_assignment; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof ModelParserListener ) ((ModelParserListener)listener).enterAssignment(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof ModelParserListener ) ((ModelParserListener)listener).exitAssignment(this);
		}
	}

	public final AssignmentContext assignment() throws RecognitionException {
		AssignmentContext _localctx = new AssignmentContext(_ctx, getState());
		enterRule(_localctx, 20, RULE_assignment);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(136); ((AssignmentContext)_localctx).variable = variable();
			setState(137); match(Equals);
			setState(138); ((AssignmentContext)_localctx).expression = expression();
			 model.assign(((AssignmentContext)_localctx).variable.node.toReference(), ((AssignmentContext)_localctx).expression.node); 
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ExpressionContext extends ParserRuleContext {
		public ExprNode node;
		public Expr_addContext expr_add;
		public Expr_addContext expr_add() {
			return getRuleContext(Expr_addContext.class,0);
		}
		public ExpressionContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_expression; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof ModelParserListener ) ((ModelParserListener)listener).enterExpression(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof ModelParserListener ) ((ModelParserListener)listener).exitExpression(this);
		}
	}

	public final ExpressionContext expression() throws RecognitionException {
		ExpressionContext _localctx = new ExpressionContext(_ctx, getState());
		enterRule(_localctx, 22, RULE_expression);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(141); ((ExpressionContext)_localctx).expr_add = expr_add();
			 ((ExpressionContext)_localctx).node =  ((ExpressionContext)_localctx).expr_add.node; 
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Expr_addContext extends ParserRuleContext {
		public ExprNode node;
		public Expr_subContext expr_sub;
		public List<TerminalNode> Plus() { return getTokens(ModelParser.Plus); }
		public TerminalNode Plus(int i) {
			return getToken(ModelParser.Plus, i);
		}
		public List<Expr_subContext> expr_sub() {
			return getRuleContexts(Expr_subContext.class);
		}
		public Expr_subContext expr_sub(int i) {
			return getRuleContext(Expr_subContext.class,i);
		}
		public Expr_addContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_expr_add; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof ModelParserListener ) ((ModelParserListener)listener).enterExpr_add(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof ModelParserListener ) ((ModelParserListener)listener).exitExpr_add(this);
		}
	}
